--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       </div>
 
       <div class="skill-row">
-        <img class="skillImage-four" src="images/world-wide-web.png" alt="">
+        <img class="skillImage-four" src="images/development.png" alt="">
         <h3>E-Book Website</h3>
         <p>It is an e-commerce site which has various interfaces so that users can easily buy books.</p>
       </div>
@@ -110,7 +110,7 @@
     <div class="mySkills">
       <h2>Skills</h2>
       <div class="mS">
-        <p>Mobile Application Development</p>
+        <p class ="p-colour">Mobile Application Development</p>
         <div class="container">
           <div class="mad">
 
@@ -119,7 +119,7 @@
       </div>
 
       <div class="mS">
-        <p>Web Development</p>
+        <p class ="p-colour">Web Development</p>
         <div class="container">
           <div class="web-development">
 
@@ -127,7 +127,7 @@
         </div>
       </div>
       <div class="mS">
-        <p>Game Development</p>
+        <p class ="p-colour">Game Development</p>
         <div class="container">
           <div class="game-development">
 
@@ -137,7 +137,7 @@
       <br>
 
       <div class="mS">
-        <p>Data Science Development</p>
+        <p class ="p-colour">Data Science Development</p>
         <div class="container">
           <div class="data-science ">
           </div>
@@ -145,7 +145,7 @@
       </div>
 
       <div class="mS">
-        <p>Data Structure</p>
+        <p class ="p-colour">Data Structure</p>
         <div class="container">
           <div class="data-structure">
 
@@ -154,7 +154,7 @@
       </div>
 
       <div class="mS">
-        <p>Database</p>
+        <p class ="p-colour">Database</p>
         <div class="container">
           <div class="database">
 
@@ -170,7 +170,7 @@
 
 
     <div class="programming-language">
-      <h2>Programming Languages</h2>
+      <h2>Programming Language</h2>
 
 
 
@@ -256,7 +256,7 @@
   </div>
 
 
-  
+
   <div class="contact-me">
     <br>
     <h2>Get In Touch</h2>
