--- a/index.html
+++ b/index.html
@@ -260,8 +260,8 @@
   <div class="contact-me">
     <br>
     <h2>Get In Touch</h2>
-    <h3 style="color:white;">If you love to code as much as I do</h3>
-    <p style="color:white;"> We can develop anything together.</p>
+      <h3 style="color:white;">If you also like coding</h3>
+    <p style="color:white;"> We can develop manything together.</p>
     <a class="btn" type="button " href="mailto:bilalbaturr@gmail.com">CONTACT ME</a>
     <br>
 
