--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
     <h2>Get In Touch</h2>
       <h3 style="color:white;">If you also like coding</h3>
     <p style="color:white;"> We can develop manything together.</p>
-    <a class="btn" type="button " href="mailto:bilalbaturr@gmail.com">CONTACT ME</a>
+    <a class="btn" type="button " href="mailto:bilal.baturr@gmail.com">CONTACT ME</a>
     <br>
 
 
