--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
           <tbody>
             <tr class="tr-color">
               <td>
-                <p>Ilksan Anatolian High School </p>
+                <p>Ilksan Anatolian <br>High School </p>
               </td>
               <td>
                 <p>Math Science</p>
               </td>
               <td>
-                <p>06.2010 09.2014</p>
+                <p>06.2010 / 09.2014</p>
               </td>
               <td>
                 <img class="school-class-one" src="images/school.png" alt="school">
@@ -53,10 +53,10 @@
                 <p>Cankaya university </p>
               </td>
               <td>
-                <p>Computer Engineering</p>
+                <p>Computer <br> Engineering</p>
               </td>
               <td>
-                <p>08.2015 06.2021</p>
+                <p>08.2015 / 06.2021</p>
               </td>
               <td>
                 <img class="school-class-one" src="images/graduation-hat.png" alt="school">
@@ -145,7 +145,7 @@
       </div>
 
       <div class="mS">
-        <p class = "p-colour">Data Structure</p>
+        <p class ="p-colour">Data Structure</p>
         <div class="container">
           <div class="data-structure">
 
@@ -154,7 +154,7 @@
       </div>
 
       <div class="mS">
-        <p class = "p-colour">Database</p>
+        <p class ="p-colour">Database</p>
         <div class="container">
           <div class="database">
 
@@ -260,9 +260,9 @@
   <div class="contact-me">
     <br>
     <h2>Get In Touch</h2>
-      <h3 style="color:white;">If you also like coding</h3>
+    <h3 style="color:white;">If you also like coding</h3>
     <p style="color:white;"> We can develop manything together.</p>
-    <a class="btn" type="button " href="mailto:bilal.baturr@gmail.com">CONTACT ME</a>
+    <a class="btn" type="button " href="mailto:bilalbaturr@gmail.com">CONTACT ME</a>
     <br>
 
 
