--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Bilal Batur</title>
   <link rel="stylesheet" href="css/styles.css">
   <link rel="icon" href="Icon/favicon.ico">
+
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bonheur+Royale&family=Calligraffitti&family=IM+Fell+English&family=Merriweather:ital,wght@1,300&family=Montserrat:wght@100&family=Sacramento&display=swap" rel="stylesheet">
@@ -31,12 +32,12 @@
 
     <div class="education">
       <h2>Education</h2>
-      <div class="education-skill-row">
-        <table cellspacing="30">
-          <tbody>
+
+        <table  width="100%" class="table-class">
+          <tbody class ="tbody-class">
             <tr class="tr-color">
               <td>
-                <p>Ilksan Anatolian <br>High School </p>
+                <p>Ilksan Anatolian <br> High School </p>
               </td>
               <td>
                 <p>Math Science</p>
@@ -45,26 +46,28 @@
                 <p>06.2010 / 09.2014</p>
               </td>
               <td>
-                <img class="school-class-one" src="images/school.png" alt="school">
-              </td>
+              <img src="images/school.png" alt="">
+            </td>
+
             </tr>
             <tr class="tr-color">
               <td>
                 <p>Cankaya university </p>
               </td>
               <td>
-                <p>Computer <br> Engineering</p>
+                <p>Computer  <br>Engineering</p>
               </td>
               <td>
                 <p>08.2015 / 06.2021</p>
               </td>
               <td>
-                <img class="school-class-one" src="images/graduation-hat.png" alt="school">
-              </td>
+              <img src="images/graduation-hat.png" alt="">
+            </td>
+
             </tr>
           </tbody>
         </table>
-      </div>
+
     </div>
   </div>
 
@@ -170,7 +173,7 @@
 
 
     <div class="programming-language">
-      <h2>Programming Language</h2>
+      <h2 class ="h2-class">Programming Language</h2>
 
 
 
